added the rest of the calculator buttons(styled)

--- a/index.html
+++ b/index.html
@@ -15,26 +15,37 @@
 
         </div>
         <div class="row1">
-            <button id="clear"></button>
-            <button id="negative"></button>
-            <button id="percent"></button>
-            <button id="divide"></button>
+            <button id="clear" style="background-color:red">AC</button>
+            <button id="negative" style="background-color: #3d9ee8;">+/-</button>
+            <button id="percent" style="background-color: #3d9ee8;">%</button>
+            <button id="divide" style="background-color: #e8873d;">/</button>
         </div>
 
         <div class="row2">
-
+            <button id="seven">7</button>
+            <button id="eight">8</button>
+            <button id="nine">9</button>
+            <button id="multiply" style="background-color: #e8873d;">*</button>
         </div>
 
         <div class="row3">
-
+            <button id="four">4</button>
+            <button id="five">5</button>
+            <button id="six">6</button>
+            <button id="minus" style="background-color: #e8873d;">-</button>
         </div>
 
         <div class="row4">
-
+            <button id="one">1</button>
+            <button id="two">2</button>
+            <button id="three">3</button>
+            <button id="plus" style="background-color: #e8873d;">+</button>
         </div>
 
         <div class="row5">
-
+            <button id="zero">0</button>
+            <button id="decimal">.</button>
+            <button id="equals" style="background-color: green;">=</button>
         </div>
     </div>
     
